@startuml example
hide empty members


interface Streamer{
    + String accountInfo
    + void registerObserver()
    + boolean removeObserver()
    + void notifyObserver()
    + boolean getIsStreaming()
    + void setIsStreaming(boolean isStreaming)
}

interface Audience{
    + void update(String streamInfo)
}

class TwitchStreamer{
    + String accountInfo
    + void registerObserver()
    + boolean removeObserver()
    + void notifyObserver()
    + boolean getIsStreaming()
    + void setIsStreaming(boolean isStreaming)
}

class TwitchAudience{
    + int accountID
    + String nickname
    + void update(String streamInfo)
}

Streamer <|-- TwitchStreamer
Audience <|-- TwitchAudience

Streamer "1" - "0..*" Audience : < register 

@enduml

